# skss

./: Cargo.toml  README.md  cleanup  run
bash/: README.md  skss.sh
src/: main.rs  util.rs
